<resources>
    <string name="app_name">Proyecto_PDM_G10</string>
    <string name="title_activity_entidad_capacitadora_menu">Entidad CapacitadoraActivity</string>
    <string name="title_activity_area_interes_menu">Area De InteresActivity</string>
    <string name="title_entidad_capacitadora_insertar">Entidad Capacitadora Insertar Activity</string>
    <string name="title_entidad_capacitadora_eliminar">Entidad Capacitadora Eliminar Activity</string>
    <string name="title_activity_entidad_capacitadora_actualizar">Entidad Capacitadora Actualizar Activity</string>
    <string name="title_activity_entidad_capacitadora_consultar">Entidad Capacitadora Consultar Activity</string>
    <string name="EntidadCapacitadora_menu">Funcion a ejecutar Entidad Capacitadora</string>
    <string name="insertar_registro">Insertar Registro</string>
    <string name="eliminar_registro">Eliminar Registro</string>
    <string name="consultar_registro">Consultar Registro</string>
    <string name="actualizar_registro">Actualizar Registro</string>
    <string name="opciones">Opciones:</string>
    <string name="limpiar">Limpiar</string>
    <string name="codigo">Codigo:</string>
    <string name="nombre">Nombre:</string>
    <string name="descripcion">Descripcion:</string>
    <string name="insertar">Insertar</string>
    <string name="consultar">Consultar</string>
    <string name="actualizar">Actualizar</string>
    <string name="eliminar">Eliminar</string>
    <string name="telefono">Telefono:</string>
    <string name="correo">Correo:</string>
    <string name="clave">Clave:</string>
    <string name="Usuario">Usuario:</string>
    <string name="Llenarbase">Llenar Base</string>
    <string name="idDiplomado">Codigo Diplomado:</string>
    <string name="titulo">Titulo:</string>
    <string name="capacidades">Capacidades:</string>
    <string name="idAreaDiplomado">Codigo Area Diplomado:</string>
    <string name="idCapacitador">Codigo Capacitador:</string>
    <string name="nombres">Nombres:</string>
    <string name="apellidos">Apellidos</string>
    <string name="IdEntidadCapacitadora">Id Entidad Capacitadora:</string>
    <string name="TipoEntidad">Tipo Entidad:</string>
    <string name="Iniciarsesion">Iniciar Sesión</string>
    <string name="InsertarEntidad">Insertar Entidad Capacitadora</string>
    <string name="consultarEntidad">Consultar Entidad Capacitora</string>
    <string name="eliminarEntidad">Eliminar Entidad Capacitadora</string>
    <string name="insertarDiplomado">Insertar Diplomado</string>
    <string name="eliminarDiplomado">Eliminar Diplomado</string>
    <string name="consultarDiplomado">Consultar Diplomado</string>
    <string name="actualizarDiplomado">Actualizar Diplomado</string>
    <string name="actualizarEntidad">Actualizar Entidad Capacitadora</string>
    <string name="insertarCapacitador">Insertar Capacitador</string>
    <string name="eliminarCapacitador">Eliminar Capacitador</string>
    <string name="consultarCapacitador">Consultar Capacitador</string>
    <string name="actualizarCapacitador">Actualizar Capacitador</string>
    <string name="insertarAreaInteres">Insertar Area Interes</string>
    <string name="eliminarAreaInteres">Eliminar Area Interes</string>
    <string name="consultarAreaInteres">Consultar Area Interes</string>
    <string name="actualizarAreaInteres">Actualizar Area Interes</string>
    <string name="insertarAreaDiplomado">Insertar Area Diplomado</string>
    <string name="eliminarAreaDiplomado">Eliminar Area Diplomado</string>
    <string name="consultarAreaDiplomado">Consultar Area Diplomado</string>
    <string name="actualizarAreaDiplomado">Actualizar Area Diplomado</string>
    <string name="idEmpleado">Codigo Empleado:</string>
    <string name="nombreEmpleado">Nommbre Empleado:</string>
    <string name="apellidoEmpleado">Apellido Empleado:</string>
    <string name="profesion">Profesion:</string>
    <string name="cargo">Cargo:</string>
    <string name="idAsistenciaEmpleado">Codigo de asistencia:</string>
    <string name="asistencia">estado</string>
    <string name="empleadoId">codigo del empleado:</string>
    <string name="idSolicitud">codigo de Solicitud:</string>
    <string name="fechaSolicitud">Fecha:</string>
    <string name="estadoSolicitud">Estado:</string>
    <string name="capacitacionId">Id de la capacitacion</string>
    <string name="Elementos">Elementos en la Base:</string>
    <string name="title_activity_facultad_menu">FacultadMenuActivity</string>
    <string name="title_activity_facultad_insertar">FacultadInsertarActivity</string>
    <string name="title_activity_facultad_eliminar">FacultadEliminarActivity</string>
    <string name="title_activity_facultad_actualizar">FacultadActualizarActivity</string>
    <string name="title_activity_facultad_consultar">FacultadConsultarActivity</string>
    <string name="facultad_menu">Función a Ejecutar Facultad</string>
    <string name="idFacultad">Nombre Facultad</string>
    <string name="nombreFacultad">Nombre Facultad</string>
    <string name="title_activity_ubicacion_menu">UbicacionMenuActivity</string>
    <string name="title_activity_ubicacion_insertar">UbicacionInsertarActivity</string>
    <string name="title_activity_ubicacion_eliminar">UbicacionEliminarActivity</string>
    <string name="title_activity_ubicacion_actualizar">UbicacionActualizarActivity</string>
    <string name="title_activity_ubicacion_consultar">UbicacionConsultarActivity</string>
    <string name="ubicacion_menu">Función a Ejecutar Ubicacion</string>
    <string name="idUbicacion">ID Ubicacion</string>
    <string name="nombre_ubicacion">Nombre Ubicacion</string>
    <string name="title_activity_tipoUbicacion_menu">TipoUbicacionMenuActivity</string>
    <string name="title_activity_tipoUbicacion_insertar">TipoUbicacionInsertarActivity</string>
    <string name="title_activity_tipoUbicacion_eliminar">TipoUbicacionEliminarActivity</string>
    <string name="title_activity_tipoUbicacion_actualizar">TipoUbicacionActualizarActivity</string>
    <string name="title_activity_tipoUbicacion_consultar">TipoUbicacionConsultarActivity</string>
    <string name="tipoUbicacion_menu">Función a Ejecutar Tipo Ubicacion</string>
    <string name="idTipoUbicacion">ID Tipo Ubicacion</string>
    <string name="nombreTipoUbicacion">Nombre Tipo Ubicacion</string>
    <string name="title_activity_local_menu">LocalMenuActivity</string>
    <string name="title_activity_local_insertar">LocalInsertarActivity</string>
    <string name="title_activity_local_eliminar">LocalEliminarActivity</string>
    <string name="title_activity_local_actualizar">LocalActualizarActivity</string>
    <string name="title_activity_local_consultar">LocalConsultarActivity</string>
    <string name="local_menu">Función a Ejecutar Local</string>
    <string name="idLocal">ID Local</string>
    <string name="idNombreUbicacion">Nombre  Ubicacion</string>
    <string name="idNombreTipoUbicacion">Nombre Tipo Ubicacion</string>
    <string name="nombreLocal">Nombre Local</string>
    <string name="InsertarUbicacion">InsertarUbicacion</string>
    <string name="InsertarLocal">Insertar Local</string>
    <string name="InsertarFacultad">Insertar Facultad</string>
    <string name="InsertarTipoUbi">Insertar Tipo Ubicacion</string>
    <string name="eliminarUbicacion">Eliminar Ubicacion</string>
    <string name="eliminarTipoUbi">Eliminar Tipo Ubicacion</string>
    <string name="eliminarLocal">Eliminar Local</string>
    <string name="eliminarFacultad">Eliminar Facultad</string>
    <string name="consultarFacultad">Consultar Facultad</string>
    <string name="consultarLocal">Consultar Local</string>
    <string name="consultarTipoUbi">Consultar Tipo Ubicacion</string>
    <string name="consultarUbicacion">Consultar Ubicacion</string>
    <string name="actualizarUbicacion">Actualizar Ubicacion</string>
    <string name="actualizarTipoUbi">Actualizar Tipo Ubicacion</string>
    <string name="actualizarFacultad">Actualizar Facultad</string>
    <string name="actualizarLocal">Actualizar Local</string>
    <string name="capacitaciones">Capacitaciones Dadas</string>
    <string name="solicitudes">Solicitudes realizadas:</string>
    <string name="servicio_PHPexterno">Servicio Externo</string>
    <string name="servicio_PHPlocal">Servicio Local</string>
    <string name="opcionesWS">Opciones Web services</string>
    <string name="ElementosExternos">Elementos en la base Externa</string>
</resources>