<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/codigo"/>
        <EditText
            android:id="@+id/editCodigo"
            android:inputType="text"
            android:maxLength="7" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/nombre" />
        <EditText
            android:id="@+id/editNombre"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/descripcion" />
        <EditText
            android:id="@+id/editDescripcion"
            android:inputType="text"
            android:maxLength="100" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/telefono" />
        <EditText
            android:id="@+id/editTelefono"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/correo" />
        <EditText
            android:id="@+id/editCorreo"
            android:inputType="text"
            android:maxLength="100" />
    </TableRow>


    <TableRow>
        <TextView android:text="@string/opciones" />
    </TableRow>

    <TableRow>
        <Button
            android:onClick="insertarEntidadCapacitadora"
            android:text="@string/insertar" />
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>
