<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1"
    android:layout_margin="30dp">
    <TextView
        android:id="@+id/Encabezado"
        android:textSize="30dp"
        android:textStyle="italic"
        android:text="@string/insertarDiplomado"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TableRow>
        <TextView android:text="@string/idDiplomado"/>
        <EditText
            android:id="@+id/editIdDiplomado"
            android:inputType="text"
            android:maxLength="5" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/titulo" />
        <EditText
            android:id="@+id/editTitulo"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/descripcion" />
        <EditText
            android:id="@+id/editDescripcion"
            android:inputType="text"
            android:maxLength="100" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/capacidades" />
        <EditText
            android:id="@+id/editCapacidades"
            android:inputType="text"
            android:maxLength="100" />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/opciones" />
    </TableRow>

    <TableRow>
        <Button
            android:onClick="insertarDiplomado"
            android:text="@string/insertar"
            android:layout_margin="6dp"/>

        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar"
            android:layout_margin="6dp"/>
    </TableRow>
</TableLayout>