<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/idEmpleado" />
        <EditText
            android:id="@+id/editIdEmpleado"
            android:inputType="text"
            android:maxLength="5" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/nombreEmpleado" />
        <EditText
            android:id="@+id/editNombreEmpleado"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/apellidoEmpleado" />
        <EditText
            android:id="@+id/editApellidoEmpleado"
            android:inputType="text"
            android:maxLength="100" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/profesion" />
        <EditText
            android:id="@+id/editProfesion"
            android:inputType="text"
            android:maxLength="100" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/cargo" />
        <EditText
            android:id="@+id/editCargo"
            android:inputType="text"
            android:maxLength="100" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="actualizarEmpleado"
            android:text="@string/actualizar" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>