<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1" >

    <TableRow>

        <TextView android:text="@string/idUbicacion"/>
        <EditText
            android:id="@+id/editid"
            android:inputType="text"
            android:maxLength="7" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/nombreFacultad"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/idFacultad"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
    </TableRow>
    <TableRow>
    <TextView android:text="@string/nombre_ubicacion" />
    <EditText
        android:id="@+id/editNombre"
        android:inputType="text"
        android:maxLength="30" />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/opciones" />
    </TableRow>

    <TableRow>
        <Button
            android:onClick="insertarUbicacion"
            android:text="@string/insertar" />
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>
