<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/idDiplomado" />
        <EditText
            android:id="@+id/editIdDiplomado"
            android:inputType="text"
            android:maxLength="5" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/titulo" />
        <EditText
            android:id="@+id/editTitulo"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/descripcion" />
        <EditText
            android:id="@+id/editDescripcion"
            android:inputType="text"
            android:maxLength="100" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/capacidades" />
        <EditText
            android:id="@+id/editCapacidades"
            android:inputType="text"
            android:maxLength="100" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="actualizarDiplomado"
            android:text="@string/actualizar" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>