<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1"
    android:layout_margin="30dp">
    <TextView
        android:id="@+id/Encabezado"
        android:textSize="30dp"
        android:textStyle="italic"
        android:text="@string/actualizarEntidad"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TableRow>
        <TextView android:text="@string/codigo" />
        <EditText
            android:id="@+id/editCodigo"
            android:inputType="text"
            android:maxLength="7" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/nombre" />
        <EditText
            android:id="@+id/editNombre"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/descripcion" />
        <EditText
            android:id="@+id/editDescripcion"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/telefono" />
        <EditText
            android:id="@+id/editTelefono"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/correo" />
        <EditText
            android:id="@+id/editCorreo"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/TipoEntidad" />
        <RadioGroup>
            <RadioButton
                android:id="@+id/radio_interna"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:checked="true"
                android:text="Entidad Interna" />

            <RadioButton
                android:id="@+id/radio_externa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="Entidad externa" />
        </RadioGroup>


    </TableRow>

    <TableRow>
        <Button
            android:onClick="actualizarEntidadCapacitadora"
            android:text="@string/actualizar"
            android:layout_margin="6dp"/>
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar"
            android:layout_margin="6dp"/>
    </TableRow>

</TableLayout>