<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1" >

    <TableRow>
        <TextView android:text="@string/idUbicacion" />
        <EditText
            android:id="@+id/editid"
            android:inputType="text"
            android:maxLength="7" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/idFacultad" />
        <EditText
            android:id="@+id/editidfacultad"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/nombre_ubicacion" />
        <EditText
            android:id="@+id/editNombre"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="actualizarUbicacion"
            android:text="@string/actualizar" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>