<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1" >

    <TableRow>
        <TextView android:text="@string/idLocal" />
        <EditText
            android:id="@+id/editid"
            android:inputType="text"
            android:maxLength="7" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/nombre_ubicacion"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/idUbicacion"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/nombreTipoUbicacion"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/idTipoUbicacion"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/nombreLocal" />
        <EditText
            android:id="@+id/editNombre"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>

    <TableRow>
        <Button
            android:onClick="actualizarLocal"
            android:text="@string/actualizar" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>